--- a/config.json
+++ b/config.json
@@ -4,5 +4,8 @@
 	"rotateInterval": 3600000,
 	"proxy-port": 8089,
 	"max-time": 3600000,
-	"reset-time": 86400000
+	"reset-time": 86400000,
+	"loglevel": {
+		"verbose": true
+	}
 }
